--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
   "curly": true,
   "eqeqeq": true,
   "immed": true,
-  "indent": 2,
+  "indent": 4,
   "latedef": true,
   "newcap": true,
   "noarg": true,
@@ -16,6 +16,7 @@
   "undef": true,
   "unused": true,
   "strict": true,
+  "globalstrict": true,
   "trailing": true,
   "smarttabs": true,
   "globals": {
