--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,6 @@
   "browser": true,
   "esnext": true,
   "bitwise": true,
-  "camelcase": true,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
@@ -20,6 +19,7 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "angular": false
+    "angular" : false,
+    "_"       : true
   }
 }
