--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "1.0.7",
     "angular-cookies": "1.0.7",
-    "angular-sanitize": "1.0.7"
+    "angular-sanitize": "1.0.7",
+    "angular-strap"  : "0.7.7",
+    "underscore" : "1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "1.0.7",
