--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,7 @@
   "smarttabs": true,
   "globals": {
     "angular" : false,
-    "_"       : true
+    "_"       : true,
+    "PouchDB" : true
   }
 }
