split the config into production/development versions

--- a/.jshintrc
+++ b/.jshintrc
@@ -21,6 +21,7 @@
   "globals": {
     "angular" : false,
     "_"       : true,
-    "PouchDB" : true
+    "PouchDB" : true,
+    "AppConfig" : true
   }
 }
