--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ultimate-crossword-app",
-  "version": "0.9",
+  "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -19,6 +19,7 @@
     "grunt-autoprefixer": "~0.2.0",
     "grunt-usemin": "~0.1.11",
     "grunt-svgmin": "~0.2.0",
+    "grunt-data-uri" : "0.1.1",
     "grunt-rev": "~0.1.0",
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
