fix problem with too many hints being fetched, fix links in FAQ, show some text when there are no solo hints, fix paging on the search page

--- a/app-config.json
+++ b/app-config.json
@@ -1,10 +1,10 @@
 {
     "development": {
         "couchdb": {
-            "blocks_url"   : "http://localhost:5984/block_summaries",
-            "related_url"  : "http://localhost:5984/related_blocks",
-            "hints_url"    : "http://localhost:5984/block_hints",
-            "users_db_url" : "http://koholint-wired:5985"
+            "blocks_url"   : "http://localhost:5984/block_summaries2",
+            "related_url"  : "http://localhost:5984/related_blocks2",
+            "hints_url"    : "http://localhost:5984/block_hints2",
+            "users_db_url" : "http://koholint:5985"
         },
         "solr_url"         : "http://localhost:8983/solr"
     },
