--- a/app-config.json
+++ b/app-config.json
@@ -4,7 +4,7 @@
             "blocks_url"   : "http://localhost:5984/block_summaries2",
             "related_url"  : "http://localhost:5984/related_blocks2",
             "hints_url"    : "http://localhost:5984/block_hints2",
-            "users_db_url" : "https://ultimatecrossword.net/couchdb"
+            "users_db_url" : "http://koholint:5985/couchdb"
         },
         "solr_url"         : "http://localhost:8983/solr",
         "debug_mode"            : true
