--- a/app-config.json
+++ b/app-config.json
@@ -1,13 +1,13 @@
 {
     "development": {
         "couchdb": {
-            "blocks_url"   : "http://localhost:5984/block_summaries2",
-            "related_url"  : "http://localhost:5984/related_blocks2",
-            "hints_url"    : "http://localhost:5984/block_hints2",
-            "users_db_url" : "http://koholint:5985/couchdb"
+            "blocks_url"   : "http://localhost:5984/block_summaries",
+            "related_url"  : "http://localhost:5984/related_blocks",
+            "hints_url"    : "http://localhost:5984/block_hints",
+            "users_db_url" : "http://koholint.local:5985/couchdb"
         },
         "solr_url"         : "http://localhost:8983/solr",
-        "debug_mode"            : true
+        "debug_mode"       : true
     },
     "production": {
         "couchdb": {
